add get events by userID
